--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "license": "MIT",
     "require": {
         "rap2hpoutre/laravel-log-viewer": "^1.4.0",
-        "statamic/cms": "3.0.*"
+        "statamic/cms": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -30,7 +30,7 @@
         "statamic": {
             "name": "Logbook",
             "description": "Manage and view log files in the CP.",
-            "version": "2.0.0"
+            "version": "2.0.1"
         },
         "laravel": {
             "providers": [
