--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "license": "MIT",
     "require": {
         "rap2hpoutre/laravel-log-viewer": "^2.3.0",
-        "statamic/cms": "^4.0"
+        "statamic/cms": "^4.0 || ^5.0"
     },
     "autoload": {
         "psr-4": {
